implementados camadas de controller, ajuste e criação de metodos no repository, refactoring class Customer, implementacao de metodo top 3 clientes com mais quantidade de compras

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,7 @@ spring.datasource.url=jdbc:h2:file:/home/diego/Dev/java/api-shop-products/data/d
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
